# NexusLoop

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  CLAUDE.md  LICENSE  NON_NEGOTIABLE_RULES.md  NON_NEGOTIABLE_RULES_dev.md  PRINCIPLES_EXTENDED.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
agentcore/: INTERVENTION_ALGEBRA.md  PROTOCOL.md  PROTOCOL_v1.1.md  REBASE_JOURNAL.md  SEAM_CONTRACT.md  SEAM_CONTRACT_TIER2.md  SEAM_INVENTORY.md  UPSTREAM_MAP.md  VENDOR_BOUNDARY.md  __init__.py
agentcore/adr/: ADR-005-cycle-driver-evolution.md  ADR-006-tier-2-seam-contract.md  ADR-007-single-brain-architecture.md  ADR-008-two-tier-scheduling.md  ADR-009-single-writer-event-log.md  ADR-010-session-storage-cancelled.md  ADR-012-config-driven-subagent-isolation.md
agentcore/client-py/: protocol.py
agentcore/client_py/: client.py  process.py  protocol.py
mcps/: __init__.py  conftest.py
nxl/: __init__.py  __main__.py  cli.py
nxl_core/: __init__.py
scripts/: audit-fork-depth.sh  bench_init.py  chaos_run.sh  check_no_hidden_failures.sh  fuzz-capability.py  fuzz-mcp-gate.py  fuzz-policy-gate.py  heartbeat.sh  overnight_run.sh  policy_fuzz.sh  rebase-upstream.sh  replay_check.sh  test_compaction_flow.py  verify_overnight_criteria.py  verify_phase.sh  verify_phase_M-1.sh  verify_phase_M0.sh  verify_phase_M1.sh  verify_phase_M2.sh  verify_phase_M3.sh  verify_phase_M4.sh  verify_priority_1.sh  verify_single_writer.sh  verify_single_writer_perf.py  verify_step.sh
skills/: _schema.yaml  design_minimal_ablation.yaml  ml_engineer_day.yaml  noise_floor_estimate.yaml  plateau_triage.yaml  refute_or_support.yaml
(+321 files in other folders)
