[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusloop"
version = "0.0.1"
description = "Event-sourced research harness for general ML"
authors = [{name = "NexusLoop contributors", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "portalocker>=2.8",
    "requests>=2.32.0",
    "rich>=13.0",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dashboard = ["aiohttp>=3.9.0"]
examples = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.5",
]
full = [
    "aiohttp>=3.9.0",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.5",
]

[project.scripts]
nxl = "nxl.cli:main"

[tool.setuptools.package-data]
"nxl" = ["plugins/**/*", "dashboard/static/**/*"]

[tool.setuptools.packages.find]
include = ["nxl*", "agentcore*", "mcps*"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
per-file-ignores = { "tests/**" = ["F821", "F401"] }

[tool.mypy]
python_version = "3.13"
strict = true
files = ["nxl", "mcps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
